# mandelbrot

./: CMakeLists.txt  dynarray.h  main.c  window.h
